test/netlist/error/conflicting-connection.bop
A(a, b) = c
where
  c = Id(a);
  c = Not(b);
end where;
